/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "ChannelDescriptorData.proto";

message ServiceDiscoveryResponse {
  repeated ChannelDescriptor channels = 1;
  required string head_unit_name = 2;
  required string car_model = 3;
  required string car_year = 4;
  required string car_serial = 5;
  required bool left_hand_drive_vehicle = 6;
  required string headunit_manufacturer = 7;
  required string headunit_model = 8;
  required string sw_build = 9;
  required string sw_version = 10;
  required bool can_play_native_media_during_vr = 11;
  optional bool hide_clock = 12;
}
