/* SPDX-License-Identifier: GPL-3.0 */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message VersionResponseStatus {
  enum Enum {
    MATCH = 0;
    MISMATCH = 0xFFFF;
  }
}
